tests/baselines/reference/parserConstructorDeclaration5.errors.txt
==== tests/cases/compiler/parserConstructorDeclaration5.ts (1 errors) ====
    class C {
      private constructor() { }
      ~~~~~~~
!!! parserConstructorDeclaration5.ts(2,3): error TS1089: 'private' modifier cannot appear on a constructor declaration.
    }